feat: move scroll view to <html> for better mobile experience

--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,14 @@
 /* Patches for Semantic UI */
 
+html, body, #root {
+  height: initial !important;
+  min-height: 100%;
+}
+
+html {
+  overflow: overlay;
+}
+
 .ui.button:only-child {
   margin-right: 0;
 }
