feat: upgrade to semantic-ui-react@1.3.0

--- a/src/pages/problem/judge-settings/common/TestDataFileSelector.module.less
+++ b/src/pages/problem/judge-settings/common/TestDataFileSelector.module.less
@@ -17,11 +17,7 @@
       padding-right: 17.5px !important;
     }
 
-    :global(.menu) {
-      overflow-y: scroll;
-    }
-
-    .itemWrapper {
+    :global(.text), :global(.item) {
       display: flex;
       align-items: center;
       width: 100%;
