--- a/src/pages/submission/submissions/SubmissionsPage.module.less
+++ b/src/pages/submission/submissions/SubmissionsPage.module.less
@@ -17,27 +17,24 @@
     margin-left: -3px !important;
   }
 
-  & > :global(.icon) {
+  &> :global(.text) :global(.icon) {
     opacity: 0.5;
   }
 
-  &:global(.active) > :global(.icon) {
+  &:global(.active) > :global(.text) :global(.icon) {
     opacity: 1;
   }
 
-  .inMenu {
-    display: none;
+  > :global(.text) {
+    .inMenu {
+      display: none;
+    }
   }
 
   :global(.menu) {
     :global(.icon) {
       display: none;
     }
-
-    .inMenu {
-      display: inline;
-    }
-
     .notInMenu {
       display: none;
     }
@@ -46,10 +43,6 @@
 
 .queryInputCodeLanguage div[role=listbox] {
   width: 150px !important;
-
-  :global(.icon:not(.dropdown)) {
-    margin-right: 11px !important;
-  }
 }
 
 .queryInputStatus div[role=listbox] {
@@ -74,7 +67,7 @@
 }
 
 // If the current value is "all", display it like a placeholder
-.selectedAll div[role=listbox]:not(:global(.active)) > span {
+.selectedAll div[role=listbox]:not(:global(.active)) > :global(.text) > span {
   color: rgba(191, 191, 191, 0.87);
 }
 
