fix(user): fix users page "Manage Groups" button margin

--- a/src/pages/user/users/UsersPage.module.less
+++ b/src/pages/user/users/UsersPage.module.less
@@ -4,7 +4,11 @@
 
   .manageGroups {
     margin-left: auto !important;
-    margin-right: 0 !important;
+
+    > :global(.button) {
+      margin-left: 14px;
+      margin-right: 0 !important;
+    }
   }
 }
 
