fix(layout): fix sticky containers not working

--- a/src/index.less
+++ b/src/index.less
@@ -7,6 +7,11 @@ html, body, #root {
 
 html {
   overflow: overlay;
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: visible !important;
 }
 
 .ui.button:only-child {
