--- a/src/pages/problem/judge-settings/ProblemJudgeSettingsPage.module.less
+++ b/src/pages/problem/judge-settings/ProblemJudgeSettingsPage.module.less
@@ -3,7 +3,7 @@
 .leftContainer {
   height: calc(100vh - 105px);
   position: sticky !important;
-  top: 0;
+  top: calc(49px + 28px + 0px);
 }
 
 .header {
