--- a/src/pages/problem/view/ProblemViewPage.module.less
+++ b/src/pages/problem/view/ProblemViewPage.module.less
@@ -97,7 +97,7 @@
 .rightContainer {
   align-self: start;
   position: sticky;
-  top: 10px;
+  top: calc(49px + 28px + 10px);
 }
 
 .secondActionMenu {
