feat(user): make left menu in user edit page sticky

--- a/src/pages/user/edit/UserEdit.module.less
+++ b/src/pages/user/edit/UserEdit.module.less
@@ -7,6 +7,9 @@
   .menu {
     width: @menuWidth;
     margin-right: @margin;
+    position: sticky;
+    top: calc(49px + 28px + 0px);
+    align-self: flex-start;
 
     :global(.menu) {
       width: @menuWidth !important;
