feat: use bundled fira code webfont for monospace font

--- a/src/index.less
+++ b/src/index.less
@@ -49,7 +49,7 @@ body {
 
 // TODO: Make it customizable
 .monospace, code, pre {
-  font-family: "Fira Mono", monospace !important;
+  font-family: "Fira Code", monospace !important;
 }
 
 pre {
