--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -84,7 +84,7 @@
   right: 0;
   top: 0;
   height: 100vh;
-  width: 100vh;
+  width: 100vw;
   background-color: rgba(0, 0, 0, 0.4);
   visibility: hidden;
   opacity: 0;
