fix(layout): fix wrong body size on initial page loading

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -106,9 +106,10 @@ body {
   @marginTop: 49px;
 
   display: block;
-  margin-top: @marginTop;
+  margin: @marginTop 0 0 0;
   padding-top: 28px;
   min-height: calc(100vh - @marginTop);
+  box-sizing: border-box;
 }
 
 @media only screen and (max-width: 1127px) {
