feat(submissions): enlarge form control size on small screens

--- a/src/pages/submission/submissions/SubmissionsPage.module.less
+++ b/src/pages/submission/submissions/SubmissionsPage.module.less
@@ -109,14 +109,6 @@
 }
 
 @media only screen and (max-width: 559px) {
-  .queryForm {
-    font-size: 0.9em !important;
-
-    :global(.button) {
-      font-size: 1em !important;
-    }
-  }
-
   .queryInputProblemId input {
     width: 95px !important;
   }
@@ -130,15 +122,15 @@
   }  
 }
 
-@media only screen and (max-width: 478px) {
+@media only screen and (max-width: 491px) {
   .queryInputCodeLanguage {
     display: none;
   }
 }
 
 @media only screen and (max-width: 375px) {
-  .queryForm {
-    font-size: 0.85em !important;
+  .queryButton {
+    display: none !important;
   }
 
   .queryInputProblemId input {
