feat: add code font options in user preference

--- a/src/pages/user/edit/UserEdit.module.less
+++ b/src/pages/user/edit/UserEdit.module.less
@@ -63,6 +63,10 @@
 
 .checkbox {
   margin-top: 8px;
+
+  &.largeMargin {
+    margin-top: 22px;
+  }
 }
 
 .notes {
@@ -126,6 +130,18 @@
 .localeSelect {
   :global(.icon:not(.dropdown)), :global(.flag) {
     margin-right: 11px !important;
+  }
+}
+
+.forceLoadFonts {
+  visibility: hidden;
+  position: absolute;
+  pointer-events: none;
+}
+
+.fontSelect {
+  :global(.active.item) {
+    font-weight: inherit !important;
   }
 }
 
