--- a/src/markdown/MarkdownContent.module.less
+++ b/src/markdown/MarkdownContent.module.less
@@ -1,3 +1,12 @@
+.markdownContent {
+  position: relative;
+  overflow: hidden;
+
+  p {
+    overflow: auto;
+  }
+}
+
 .pre {
   margin-top: 0;
   margin-bottom: 0;
