--- a/src/components/CodeBox.module.less
+++ b/src/components/CodeBox.module.less
@@ -20,3 +20,12 @@
   overflow: auto;
   overflow: overlay;
 }
+
+.omittedLabel {
+  position: absolute;
+  background-color: #ffffffdd;
+  color: #00000088;
+  right: 0;
+  bottom: 0;
+  padding: 14px 14px;
+}
