fix(problem): fix problem set page top margin

--- a/src/pages/problem/problem-set/ProblemSetPage.module.less
+++ b/src/pages/problem/problem-set/ProblemSetPage.module.less
@@ -131,6 +131,10 @@
     margin-left: 15px;
   }
 
+  .topPagination:not(:empty) {
+    margin-bottom: 27px;
+  }
+
   .search {
     width: 280px;
     display: inline-block;
