refactor(*): use PascalCase for enum values (except response errors)

--- a/src/pages/problem/edit/ProblemEditPage.module.less
+++ b/src/pages/problem/edit/ProblemEditPage.module.less
@@ -46,7 +46,7 @@
 .sectionSegment {
   border-radius: 0 !important;
 
-  &[data-type=TEXT] {
+  &[data-type=Text] {
     padding: 0 !important;
 
     textarea {
