feat(problem): add discussion count on problem view page

--- a/src/pages/problem/view/ProblemViewPage.module.less
+++ b/src/pages/problem/view/ProblemViewPage.module.less
@@ -101,6 +101,12 @@
   top: calc(49px + 28px + 10px);
 }
 
+:global(#root) .discussionCount {
+  background-color: #e8e8e8;
+  color: rgba(0, 0, 0, 0.6);
+  transform: translateY(calc((100% - 16px) / 2)); // menu height = 16px
+}
+
 .secondActionMenu {
   margin-top: 40px !important;
 
