feat(markdown): prevent users' contents overflowing with "position: fixed"

--- a/src/markdown/MarkdownContent.module.less
+++ b/src/markdown/MarkdownContent.module.less
@@ -1,6 +1,7 @@
 .markdownContent {
   position: relative;
   overflow: hidden;
+  transform: translate3d(0, 0, 0);
 
   p, mjx-container {
     overflow: auto;
