feat(*): minor ui tweaks

--- a/src/index.less
+++ b/src/index.less
@@ -45,6 +45,16 @@ body {
   border-color: #767676 transparent transparent;
 }
 
+.ui.header.withIcon {
+  > .icon {
+    font-size: 1.1em;
+
+    + .content {
+      padding-left: 0.6rem;
+    }
+  }
+}
+
 /* Global styles */
 
 pre {
