--- a/src/pages/discussion/edit/DiscussionEditPage.module.less
+++ b/src/pages/discussion/edit/DiscussionEditPage.module.less
@@ -1,10 +1,6 @@
-.header {
-  margin: 14px 0 !important;
+.editor {
+  margin-top: 15px;
   @media only screen and (min-width: 768px) {
-    margin-bottom: 18px;
+    margin-top: 28px;
   }
-
-  height: 40px;
-  line-height: 40px !important;
-  font-weight: normal !important;
 }
