--- a/src/pages/discussion/discussions/DiscussionsPage.module.less
+++ b/src/pages/discussion/discussions/DiscussionsPage.module.less
@@ -69,8 +69,12 @@
 
 .pagination:not(:empty) {
   text-align: center;
-  margin-top: 16px;
+  margin-top: 20px;
   margin-bottom: 18px;
+
+  @media only screen and (max-width: 767px) {
+    margin-top: 14px;
+  }
 }
 
 .nowrapRow {
