feat(user): add nickname

--- a/src/pages/user/user/UserPage.module.less
+++ b/src/pages/user/user/UserPage.module.less
@@ -21,9 +21,16 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .nickname {
+    margin-top: 20px !important;
+    margin-bottom: -19px !important;
+  }
+
   .username {
-    margin-top: 15px !important;
-    margin-bottom: 1px !important;
+    margin-top: 20px !important;
+    margin-bottom: 16px !important;
+    font-size: 1.538em;
+    color: #666;
   }
 
   .bio {
