--- a/src/pages/discussion/view/DiscussionViewPage.module.less
+++ b/src/pages/discussion/view/DiscussionViewPage.module.less
@@ -88,6 +88,7 @@
 
   @header-background: #f7f7f7;
   @header-background-current-user: #f1f8ff;
+  @reaction-item-background-hover: #f9fdff;
   @content-margin: 14px;
 
   > .avatar {
@@ -270,6 +271,19 @@
           border-right: 1px solid @border-color;
           border-bottom: 1px solid @border-color;
           cursor: pointer;
+
+          &.disabled {
+            cursor: default;
+
+            .link {
+              color: #777;
+              cursor: default;
+            }
+          }
+
+          &:not(.disabled):not(.selected):hover {
+            background-color: @reaction-item-background-hover;
+          }
 
           &.selected {
             background-color: @header-background-current-user;
