feat(problem): disable points edit on only one subtask or testcase

--- a/src/pages/problem/judge-settings/common/SubtasksEditor.module.less
+++ b/src/pages/problem/judge-settings/common/SubtasksEditor.module.less
@@ -105,6 +105,10 @@
     width: 70px;
     padding: 13px 14px 13px 8px !important;
 
+    > :global(.ui.disabled.input) {
+      opacity: 1;
+    }
+
     input {
       text-align: center !important;
       padding-right: 14px !important;
