feat(submission): hide pagination if there's only one page in submissions page

--- a/src/pages/submission/submissions/SubmissionsPage.module.less
+++ b/src/pages/submission/submissions/SubmissionsPage.module.less
@@ -76,7 +76,11 @@
 }
 
 .table {
-  margin-bottom: 20px !important;
+  margin-bottom: -10px !important;
+}
+
+.pagination {
+  margin-top: 28px;
 }
 
 // responsive
@@ -104,7 +108,11 @@
   }
 
   .table {
-    margin-bottom: 14px !important;
+    margin-bottom: -14px !important;
+  }
+
+  .pagination {
+    margin-top: 28px;
   }
 }
 
