fix(user): fix audit view code box can't scroll

--- a/src/pages/user/edit/UserEdit.module.less
+++ b/src/pages/user/edit/UserEdit.module.less
@@ -325,6 +325,8 @@
 
       pre {
         max-height: 250px !important;
+        overflow-y: auto !important;
+        overflow-y: overlay !important;
       }
     }
 
