feat: add recaptcha support

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -170,7 +170,7 @@ body {
 
   padding: 0 !important;
   border: none !important;
-  color: #999;
+  color: #888;
 
   &.placeholder {
     margin: calc(@margin-top + @margin-bottom) 0 0 0 !important;
@@ -192,12 +192,14 @@ body {
 }
 
 #footerVersion {
+  color: #c7c7c7;
   font-size: 12px !important;
-  opacity: 0.65;
   margin: 4px 0 4px;
 }
 
 .footerIcons {
+  color: #999;
+
   a {
     color: inherit !important;
   }
