--- a/src/pages/auth/common.module.less
+++ b/src/pages/auth/common.module.less
@@ -62,3 +62,10 @@
   margin-top: 9.25px;
   right: 25px;
 }
+
+.recaptchaCopyright {
+  display: block;
+  margin: -5px 0 9px 0;
+  color: #999;
+  font-size: 12.5px;
+}
