feat(*): add href to pagination to enable middle button to open in new window

--- a/src/components/Pagination.module.less
+++ b/src/components/Pagination.module.less
@@ -3,3 +3,13 @@
     outline: none;
   }
 }
+
+.pagination.simple {
+  :global(.item) {
+    outline: none;
+
+    &[type=pageItem] {
+      display: none !important;
+    }
+  }
+}
