--- a/src/pages/submission/submissions/SubmissionsPage.module.less
+++ b/src/pages/submission/submissions/SubmissionsPage.module.less
@@ -80,6 +80,7 @@
 }
 
 .pagination {
+  text-align: center;
   margin-top: 28px;
 }
 
@@ -112,6 +113,7 @@
   }
 
   .pagination {
+    text-align: center;
     margin-top: 28px;
   }
 }
