fix(judge-clients): fix judge clients page display issues

--- a/src/pages/judge-machine/JudgeMachinePage.module.less
+++ b/src/pages/judge-machine/JudgeMachinePage.module.less
@@ -13,17 +13,17 @@
   margin-left: 10px !important;
 }
 
-.columnStatus {
-  width: 115px;
-
-  td& {
-    display: flex;
-    align-items: center;
-  }
+.status {
+  display: flex;
+  align-items: center;
 
   .onlineStatus {
     margin-right: 10px !important;
   }
+}
+
+.nowrap {
+  white-space: nowrap;
 }
 
 .columnOperations {
