fix(user): fix homepage and users page user bio expand the row height

--- a/src/pages/home/home/HomePage.module.less
+++ b/src/pages/home/home/HomePage.module.less
@@ -16,6 +16,13 @@
   tbody > tr:last-child > td {
     padding-bottom: 0;
   }
+
+  .columnBio > div {
+    display: inline-block;
+    white-space: normal;
+    height: 15px;
+    overflow: hidden;
+  }
 }
 
 .noWrap {
