feat(discussion): add link to all problems' discussions in discussions page

--- a/src/pages/discussion/discussions/DiscussionsPage.module.less
+++ b/src/pages/discussion/discussions/DiscussionsPage.module.less
@@ -1,3 +1,9 @@
+.switch {
+  .divider {
+    margin: 0 7px;
+  }
+}
+
 .allProblemsLink {
   color: inherit !important;
   font-weight: normal !important;
