feat(problem): fix judge settings page yaml codebox can't scroll

--- a/src/pages/problem/judge-settings/ProblemJudgeSettingsPage.module.less
+++ b/src/pages/problem/judge-settings/ProblemJudgeSettingsPage.module.less
@@ -26,6 +26,11 @@
   .yamlSegment {
     margin-top: 14px !important;
     height: calc(100% - 50px);
+
+    pre {
+      overflow-y: auto !important;
+      overflow-y: overlay !important;
+    }
   }
 }
 
