--- a/src/pages/submission/componments/SubmissionItem.module.less
+++ b/src/pages/submission/componments/SubmissionItem.module.less
@@ -90,114 +90,6 @@
       }
     }
   }
-
-  @media only screen and (max-width: 767px) {
-    &.statisticsPage {
-      .columnScore {
-        display: none;
-      }
-
-      &.statisticsTypeSubmitTime {
-        .columnTime {
-          display: none;
-        }
-
-        .columnMemory {
-          display: none;
-        }
-      }
-
-      &:not(.statisticsTypeSubmitTime) {
-        .columnSubmitTime {
-          display: none;
-        }
-      }
-    }
-
-    &.submissionsPage {
-      .columnAnswer {
-        display: none;
-      }
-    }
-  }
-
-  @media only screen and (max-width: 639px) {
-    &.submissionsPage {
-      .columnStatus {
-        width: 150px !important;
-      }
-    }
-  }
-
-  @media only screen and (max-width: 559px) {
-    &.statisticsPage {
-      &:not(.statisticsTypeTime) .columnTime {
-        display: none;
-      }
-      &:not(.statisticsTypeMemory) .columnMemory {
-        display: none;
-      }
-      &:not(.statisticsTypeAnswer) .columnAnswer {
-        display: none;
-      }
-      &:not(.statisticsTypeSubmitTime) .columnSubmitTime {
-        display: none;
-      }
-    }
-
-    .submissionsPage {
-      .submitter {
-        display: none;
-      }
-    }
-
-    .columnStatus,
-    .columnScore,
-    .columnProblemAndSubmitter,
-    .columnTime,
-    .columnMemory,
-    .columnAnswer,
-    .columnSubmitTime {
-      font-size: 0.9em;
-    }
-
-    .columnSubmitTime {
-      width: 105px;
-    }
-  }
-
-  @media only screen and (max-width: 478px) {
-    &.submissionsPage {
-      .columnStatus {
-        width: 40px !important;
-        text-align: center !important;
-
-        :global(.statusicon) {
-          margin-right: 0 !important;
-        }
-
-        :global(.statustext) {
-          display: none;
-        }
-      }
-    }
-  }
-
-  @media only screen and (max-width: 375px) {
-    .columnStatus,
-    .columnScore,
-    .columnProblemAndSubmitter,
-    .columnTime,
-    .columnMemory,
-    .columnAnswer,
-    .columnSubmitTime {
-      font-size: 0.85em;
-    }
-
-    .columnSubmitTime {
-      width: 95px;
-    }
-  }
 }
 
 .submissionItemMobile {
@@ -261,7 +153,7 @@
     }
 
     // Column 2: problem
-    //           submitter & time
+    //           submitter & [important field]
     > :nth-child(2) {
       flex-grow: 1;
       overflow: hidden;
@@ -275,7 +167,7 @@
         margin-bottom: @line-spacing;
       }
 
-      // Row 2: submitter & time
+      // Row 2: submitter & [important field]
       > :nth-child(2) {
         display: flex;
 
@@ -286,7 +178,7 @@
           text-overflow: ellipsis;
         }
 
-        // time
+        // [important field]
         > :nth-child(2) {
           text-align: right;
           padding-left: 11px;
