feat(*): add content font preference

--- a/src/components/CodeBox.module.less
+++ b/src/components/CodeBox.module.less
@@ -20,6 +20,10 @@
   overflow: auto;
   overflow: overlay;
   overflow-y: hidden;
+
+  &.wrap {
+    white-space: pre-wrap;
+  }
 }
 
 .omittedLabel {
