--- a/src/pages/user/edit/UserEdit.module.less
+++ b/src/pages/user/edit/UserEdit.module.less
@@ -139,6 +139,10 @@
   pointer-events: none;
 }
 
+.formLabel {
+  font-size: 14px !important;
+}
+
 .fontSelect {
   :global(.active.item) {
     font-weight: inherit !important;
