--- a/src/components/CodeEditor.module.less
+++ b/src/components/CodeEditor.module.less
@@ -4,6 +4,14 @@
   height: 100%;
   position: relative;
 
+  .fallbackTextArea {
+    outline: none;
+    resize: none;
+    border: none;
+    width: 100%;
+    height: 100%;
+  }
+
   &:focus-within {
     border-color: #85b7d9;
     box-shadow: inset 0 0 0 0 rgba(34, 36, 38, 0.35);
