fix(markdown): fix box-shadow in markdown content get cut

--- a/src/markdown/MarkdownContent.module.less
+++ b/src/markdown/MarkdownContent.module.less
@@ -3,6 +3,10 @@
   overflow: hidden;
   transform: translate3d(0, 0, 0);
 
+  // Fix box-shadow get cut
+  padding: 2px;
+  margin: -2px;
+
   p, blockquote, mjx-container[display="true"] {
     overflow: auto;
   }
