fix(user): minor ui fix in preference view

--- a/src/pages/user/edit/UserEdit.module.less
+++ b/src/pages/user/edit/UserEdit.module.less
@@ -80,7 +80,7 @@
   resize: none !important;
 }
 
-.submit, .header:not(:first-child) {
+.submit, .header:not(:first-child), .headerMargin {
   margin-top: 22px !important;
 }
 
