fix(layout): fix compatibility with some chrome extensions

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -161,7 +161,9 @@ body {
 
 // Set "position: relative; " on <body> instead of <html> to make Popper.js work
 body {
-  position: relative;
+  // Extensions e.g. "Youdao directory" will add a inline style "position: static; " to <body>
+  // Adding "!important" to prevent it from broken
+  position: relative !important;
 }
 
 .footer {
