fix(problem): fix tags search in problem set not working

--- a/src/pages/problem/problem-set/ProblemSetPage.module.less
+++ b/src/pages/problem/problem-set/ProblemSetPage.module.less
@@ -71,6 +71,10 @@
   margin-top: 15px !important;
   margin-bottom: 28px !important;
 
+  p:empty {
+    display: none;
+  }
+
   .tag {
     margin: 2px !important;
   }
